--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="colo:blue;">
+    <h1 style="color:blue;">
         welcome to my website
     </h1>
     <h2> hello </h2>
